--- a/al-folio/_bibliography/papers.bib
+++ b/al-folio/_bibliography/papers.bib
@@ -1,115 +1,451 @@
----
----
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@InProceedings{Rehse2020,
+  author    = {Rehse, J. R. and Striewe, M. and Ullrich, M.},
+  booktitle = {Proc. Modellierung 2020 Short, Workshop and Tools {\&} Demo Papers, Wien, {\"{O}}sterreich},
+  title     = {{2. Workshop zur Modellierung in der Hochschullehre (MoHoL)}},
+  year      = {2020},
+  editor    = {Michael, Judith and Bork, Dominik and Fill, Hans-Georg and Fettke, Peter and Karagiannis, Dimitris and K{\"{o}}pke, Julius and Koschmider, Agnes and Mayr, Heinrich C and Rehse, Jana-Rebecca and Reimer, Ulrich and Striewe, Michael and Tropmann-Frick, Marina and Ullrich, Meike},
+  publisher = {CEUR-WS},
+  volume    = {2542},
+  file      = {:Users/sonne/Desktop/paper/MOHOL-preface.pdf:pdf},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+
+@InProceedings{Fellmann2016,
+  author    = {Fellmann, Michael and Fettke, Peter and Houy, Constantin and Loos, Peter and Oberweis, Andreas and Schoknecht, Andreas and Striewe, Michael and Thaler, Tom and Ullrich, Meike},
+  booktitle = {Proc. 14. e-Learning Fachtagung Informatik (DeLFI), Potsdam, Deutschland},
+  title     = {{Evaluation automatisierter Ans{\"{a}}tze f{\"{u}}r die Bewertung von Modellierungsaufgaben}},
+  year      = {2016},
+  editor    = {Lucke, U. and Schwill, A. and Zender, R.},
+  pages     = {203--214},
+  publisher = {Gesellschaft f{\"{u}}r Informatik e.V.},
+  series    = {LNI},
+  volume    = {P-262},
+  file      = {:Users/sonne/Desktop/paper/Fellmann et al. - 2016 - Evaluation automatisierter Ans{"{a}}tze f{"{u}}r die Bewertung von Modellierungsaufgaben.pdf:pdf;:/Users/sonne/Desktop/paper/Fellmann et al. - 2016 - Evaluation automatisierter Ansätze für die Bewertung von Modellierungsaufgaben.pdf:PDF},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+
+@Article{Ullrich2021b,
+  author  = {Ullrich, M. and Houy, Constantin and Stottrop, T. and Striewe, M. and Willems, B. and Fettke, P. and Loos, P. and Oberweis, A.},
+  journal = {Enterprise Modelling and Information Systems Architecture (EMISAJ), Int. Journal of Conceptual Modeling},
+  title   = {{E-Assessment for Conceptual Models: A Systematic Literature Review}},
+  year    = {2023},
+  volume  = {18},
+  file    = {:/Users/sonne/Desktop/paper/EMISAJ-Paper-1-SLR_20831.pdf:PDF},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+
+
+@InProceedings{DBLP:conf/zeus/UllrichS16,
+  author    = {Ullrich, Meike and Schoknecht, Andreas},
+  booktitle = {Proc. 8th Central European Workshop on Services and their Composition (ZEUS), Wien, {\"{O}}sterreich},
+  title     = {{(Business Process) Models from an Educational Perspective}},
+  year      = {2016},
+  editor    = {Hochreiner, Christoph and Schulte, Stefan},
+  pages     = {53--55},
+  publisher = {CEUR-WS},
+  volume    = {1562},
+  file      = {:Users/sonne/Desktop/paper/Ullrich, Schoknecht - 2016 - (Business Process) Models from an Educational Perspective.pdf:pdf},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+
+
+
+
+
+
+@InProceedings{Binder2019,
+  author    = {Binder, Matthias and Oberweis, Andreas and Ullrich, Meike},
+  booktitle = {Proc. E-Pr{\"{u}}fungs-Symposium (ePS), Siegen, Deutschland},
+  title     = {{Bewertung grafischer Prozessmodelle mit Methoden des Maschinellen Lernens: Ein Experiment}},
+  year      = {2019},
+  pages     = {12--14},
+  file      = {:Users/sonne/Desktop/paper/EPS{_}19{_}Binder.pdf:pdf;:/Users/sonne/Desktop/paper/EPS_19_Binder.pdf:PDF},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+
+
+@InProceedings{Ullrich2020,
+  author    = {Ullrich, Meike and Franzen, Salome E and Oberweis, Andreas},
+  booktitle = {Proc. Modellierung 2020 Short, Workshop and Tools {\&} Demo Papers, 2. Workshop zur Modellierung in der Hochschullehre (MoHoL), Wien, {\"{O}}sterreich},
+  title     = {{Was sollen Studierende modellieren? Erweiterung klassischer Prozessmodellierungsaufgaben um den Aspekt der Prozesserhebung}},
+  year      = {2020},
+  editor    = {Michael, Judith and Bork, Dominik and Fill, Hans-Georg and Fettke, Peter and Karagiannis, Dimitris and K{\"{o}}pke, Julius and Koschmider, Agnes and Mayr, Heinrich C and Rehse, Jana-Rebecca and Reimer, Ulrich and Striewe, Michael and Tropmann-Frick, Marina and Ullrich, Meike},
+  pages     = {113--118},
+  publisher = {CEUR-WS},
+  volume    = {2542},
+  file      = {:Users/sonne/Desktop/paper/MOHOL7.pdf:pdf},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+
+@InProceedings{Ullrich2021a,
+  author    = {Ullrich, M. and Forell, M. and Houy, C. and Pfeiffer, P. and Sch{\"{u}}ler, S. and Stottrop, T. and Willems, B. and Fettke, P. and Oberweis, A.},
+  booktitle = {Proc. Software Engingeering 2021 Satellite Events, Workshop on Software Engineering for E-Learning Systems (SEELS), Braunschweig, Deutschland/Virtuell},
+  title     = {{Platform Architecture for the Diagram Assessment Domain}},
+  year      = {2021},
+  editor    = {G{\"{o}}tz, S. and Linsbauer, L. and Sch{\"{a}}fer, I. and Wortmann, A.},
+  publisher = {CEUR-WS},
+  volume    = {2814},
+  file      = {:/Users/sonne/Desktop/paper/SEELS_3328.pdf:PDF},
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+
+
+@InProceedings{Striewe2020a,
+  author    = {Striewe, M. and Houy, C. and Rehse, J. R. and Ullrich, M. and Fettke, P. and Schaper, N. and Oberweis, A.},
+  booktitle = {6. Workshop zum Stand und den Herausforderungen des Gesch{\"{a}}ftsprozessmanagements (ZuGPM). Jahrestagung der Gesellschaft f{\"{u}}r Informatik, Rostock, Deutschland},
+  title     = {{Towards an Automated Assessment of Graphical (Business Process) Modelling Competences: A Research Agenda}},
+  year      = {2020},
+  editor    = {Reussner, R.H. and Koziolek, A. and Heinrich, R.},
+  publisher = {Gesellschaft f{\"{u}}r Informatik e.V.},
+  series    = {LNI},
+  volume    = {P-307},
+  file      = {:/Users/sonne/Desktop/paper/ZUGPM_2696.pdf:PDF},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+
+
+
+
+@Article{Striewe2021,
+  author  = {Striewe, Michael and Forell, M. and Houy, Constantin and Pfeiffer, Peter and Schiefer, Gunther and Sch{\"{u}}ler, Selina and Soyka, Chantal and Stottrop, Tobias and Ullrich, Meike and Fettke, Peter and Loos, Peter and Oberweis, Andreas and Schaper, Niclas},
+  journal = {HMD Praxis der Wirtschaftsinformatik},
+  title   = {{Kompetenzorientiertes E-Assessment f{\"{u}}r die grafische, konzeptuelle Modellierung}},
+  year    = {2021},
+  number  = {1},
+  pages   = {1350--1363},
+  volume  = {58},
+  file    = {:/Users/sonne/Desktop/paper/HMD_4683.pdf:PDF},
 }
+
+
+
+@InProceedings{Caporale2013b,
+  author    = {Caporale, Timm and {\c{C}}itak, M. and Lehner, Jonas and Schoknecht, Andreas and Oberweis, Andreas and Ullrich, Meike},
+  booktitle = {Proc. 21st European Conf. on Information Systems (ECIS), Utrecht, Niederlande},
+  title     = {{Motivating Course Concept: Using Active Labs for BPM Education}},
+  year      = {2013},
+  editor    = {R. Helms AND S. Brinkkemper},
+  pages     = {12},
+  publisher = {AIS eLibrary},
+  file      = {:Users/sonne/Desktop/paper/Motivating Course Concept{\_} Using Active Labs For BPM Education.pdf:pdf},
+}
+
+
+@InProceedings{Caporale2013a,
+  author    = {Caporale, Timm and {\c{C}}itak, Murat and Lehner, Jonas and Oberweis, Andreas and Schoknecht, Andreas and Ullrich, Meike},
+  booktitle = {Proc 15. IEEE Conf. on Business Informatics (CBI), Wien, {\"{O}}sterreich},
+  title     = {{Social BPM Lab -- Characterization of a Collaborative Approach for Business Process Management Education}},
+  year      = {2013},
+  editor    = {C. Huemer},
+  pages     = {367--373},
+  publisher = {IEEE},
+  file      = {:Users/sonne/Desktop/paper/06642902.pdf:pdf},
+}
+
+
+
+@InProceedings{Ullrich2016,
+  author    = {Fellmann, Michael and Schoknecht, Andreas and Ullrich, Meike},
+  booktitle = {Proc. Modellierung 2016, Karlsruhe, Deutschland - Workshopband},
+  title     = {{Vorwort zum Workshop zur Modellierung in der Hochschullehre (MoHoL 2016)}},
+  year      = {2016},
+  editor    = {Betz, Stefanie and Reimer, Ullrich},
+  pages     = {45--46},
+  publisher = {Gesellschaft f{\"{u}}r Informatik e.V.},
+  series    = {LNI},
+  volume    = {P-255},
+}
+
+
+@InProceedings{Ullrich2022a,
+  author    = {Meike Ullrich and Peter Peiffer and Gunther Schiefer and Chantal Soyka and Tobias Stottrop and Michael Striewe and Peter Fettke and Peter Loos and Andreas Oberweis and Niclas Schaper},
+  booktitle = {Proc. 20. Fachtagung Bildungstechnologien (DeLFI), Karlsruhe},
+  title     = {E-Assessment-Plattform für die grafische Modellierung},
+  year      = {2022},
+  editor    = {Peter A. Henning and Michael Striewe and Matthias W{\"{o}}lfel},
+  pages     = {247--248},
+  publisher = {Gesellschaft für Informatik e.V.},
+  series    = {LNI},
+  volume    = {P-322},
+}
+
+@InProceedings{Ullrich2022b,
+  author    = {Meike Ullrich and Peter Peiffer and Gunther Schiefer and Chantal Soyka and Tobias Stottrop and Michael Striewe and Peter Fettke and Peter Loos and Andreas Oberweis and Niclas Schaper},
+  booktitle = {Proc. 20. Fachtagung Bildungstechnologien (DeLFI), Karlsruhe},
+  title     = {Piloteinsatz einer E-Assessment-Plattform für die grafische Modellierung},
+  year      = {2022},
+  editor    = {Peter A. Henning and Michael Striewe and Matthias W{\"{o}}lfel},
+  pages     = {233--234},
+  publisher = {Gesellschaft für Informatik e.V.},
+  series    = {LNI},
+  volume    = {P-322},
+}
+
+
+
+@InProceedings{Cayoglu2014,
+  author    = {Cayoglu, U. and Dijkman, Remco and Dumas, Marlon and Fettke, Peter and Garc{\'i}a-Ba{\~{n}}uelos, Luciano and Hake, Philip and Klinkm{\"u}ller, Christopher and Leopold, Henrik and Ludwig, Andr{\'e} and Loos, Peter and Mendling, Jan and Oberweis, Andreas and Schoknecht, Andreas and Sheetrit, Eitam and Thaler, Tom and Ullrich, Meike and Weber, Ingo and Weidlich, Matthias},
+  booktitle = {Proc. 11th Int. Conf. on Business Process Management (BPM), Workshops, Peking, China},
+  title     = {Report: The Process Model Matching Contest 2013},
+  year      = {2014},
+  editor    = {Lohmann, Niels and Song, Minseok and Wohed, Petia},
+  pages     = {442--463},
+  publisher = {Springer},
+  series    = {LNBIP},
+  volume    = {171},
+  abstract  = {Process model matching refers to the creation of correspondences between activities of process models. Applications of process model matching are manifold, reaching from model validation over harmonization of process variants to effective management of process model collections. Recently, this demand led to the development of different techniques for process model matching. Yet, these techniques are heuristics and, thus, their results are inherently uncertain and need to be evaluated on a common basis. Currently, however, the BPM community lacks established data sets and frameworks for evaluation. The Process Model Matching Contest 2013 aimed at addressing the need for effective evaluation by defining process model matching problems over published data sets.},
+  file      = {:/Users/sonne/Desktop/paper/cayoglu2013.pdf:PDF},
+  isbn      = {978-3-319-06257-0},
+}
+
+@InProceedings{Caporale2013c,
+  author    = {Timm Caporale and Murat Citak and Jonas Lehner and Andreas Oberweis and Andreas Schoknecht and Meike Ullrich},
+  booktitle = {Proc. 19th EUNIS Congress „ICT Role for Next Generation Universities”, Riga, Lettland},
+  title     = {Repository Platform for Motivating Education},
+  year      = {2013},
+}
+
+@Misc{Cayoglu2013,
+  author      = {U. Cayoglu and A. Oberweis and A. Schoknecht and M. Ullrich},
+  title       = {Triple-S: A Matching Approach for Petri Nets on Syntactic, Semantic and Structural Level},
+  year        = {2013},
+  institution = {Institute of Applied Informatics and Formal Description Methods},
+  url         = {https://semreuse.aifb.kit.edu/downloads/TripleS.pdf},
+  urldate     = {2022-06-15},
+}
+
+@InProceedings{Ullrich2022c,
+  author    = {Ullrich, Meike AND Fettke, Peter AND Pfeiffer, Peter AND Schüler, Selina AND Striewe, Michael},
+  booktitle = {Proc. Workshops Modellierung 2022, Hamburg, Deutschland},
+  title     = {3. Workshop zur Modellierung in der Hochschullehre},
+  year      = {2022},
+  editor    = {Michael, Judith AND Pfeiffer AND Jérôme AND Wortmann, Andreas},
+  pages     = {174-175},
+  publisher = {Gesellschaft für Informatik e.V.},
+  doi       = {10.18420/modellierung2022ws-023},
+}
+
+
+
+@Article{Soyka2022,
+  author    = {Soyka, Chantal and Schaper, Niclas and Bender, Elena and Striewe, Michael and Ullrich, Meike},
+  journal   = {ACM Transactions on Computing Education},
+  title     = {Towards a Competence Model for Graphical Modeling},
+  year      = {2022},
+  address   = {New York, NY, USA},
+  file      = {:/Users/sonne/Desktop/paper/TOCE_16905.pdf:PDF},
+  keywords  = {graphical modeling; conceptual modeling; computer science; competence model; higher education},
+  publisher = {Association for Computing Machinery},
+}
+
+
+
+@Article{Soyka2022b,
+  author  = {Soyka, C. and Striewe, M. and Ullrich, M. and Schaper, N.},
+  journal = {Enterprise Modelling and Information Systems Architecture (EMISAJ), Int. Journal of Conceptual Modeling},
+  title   = {{Comparison of Required Competences and Assessment Task Material in Modeling Education}},
+  year    = {2023},
+  volume  = {18},
+  file    = {:/Users/sonne/Desktop/paper/EMISAJ-Paper-2_17930.pdf:PDF},
+}
+
+@Misc{Kompetenzmodell,
+  author = {Soyka, C. and Schaper, N. and Striewe, M. and Ullrich, M.},
+  month  = oct,
+  note   = {CC BY 4.0},
+  title  = {Das Kompetenzmodell für die grafische Modellierung},
+  year   = {2022},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/Kompetenzmodell_fuer_die_grafische_Modellierung__kompakt_.pdf},
+}
+
+@Misc{Glossar,
+  author = {Soyka, C. and Schaper, N. and Striewe, M. and Ullrich, M.},
+  month  = oct,
+  note   = {CC BY 4.0},
+  title  = {Glossar zum Kompetenzmodell für die grafische Modellierung},
+  year   = {2022},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/Glossar_zum_Kompetenzmodell_fuer_die_grafische_Modellierung.pdf},
+}
+
+
+
+
+@Misc{Rubrics,
+  author = {Soyka, C. and Schaper, N. and Striewe, M. and Ullrich, M.},
+  month  = oct,
+  note   = {CC BY 4.0},
+  title  = {Rubrics für Aufgabentypen im Bereich der grafischen Modellierung},
+  year   = {2022},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/Rubrics_fuer_Modellierungsaufgaben.pdf},
+}
+
+@Misc{Leitfaden,
+  author = {Soyka, C. and Schaper, N. and Striewe, M. and Ullrich, M.},
+  note   = {CC BY 4.0},
+  title  = {Leitfaden zum Einsatz des digitalen Fachkonzepts im Projekt KEA-Mod},
+  year   = {2023},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/KEA_Mod_Leitfaden_zum_Einsatz_des_digitalen_Fachkonzepts.pdf},
+}
+
+@Misc{Aufgabentypen,
+  author = {Soyka, C. and Schaper, N. and Striewe, M. and Ullrich, M.},
+  month  = oct,
+  note   = {CC BY 4.0},
+  title  = {Aufgabenkatalog für die grafische Modellierung},
+  year   = {2022},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/Kompetenzorientierter_Aufgabenkatalog_fuer_die_grafische_Modellierung.pdf},
+}
+
+@Misc{Broschuere,
+  author = {Soyka, C. and Schaper, N. and Ullrich, M. and Striewe, M. and Schüler, S. and Schiefer, G.},
+  month  = oct,
+  title  = {Anwendungsorientierte Handreichung. Kompetenzorientiertes Prüfen in der Hochschullehre im Fachgebiet der grafischen Modellierung, CC BY-NC-SA 4.0},
+  year   = {2022},
+  url    = {https://keamod.gi.de/fileadmin/PR/KEAMOD/Kompetenzmodell/Anwendungsorientierte_Handreichung_KEA-Mod.pdf},
+}
+
+
+
+
+
+@InCollection{Ullrich2023b,
+  author    = {Meike Ullrich and Selina Schüler and Martin Forell and Gunther Schiefer},
+  booktitle = {Digitale Prüfungen - flexibel, kompetenzorientiert und gerecht: Erkenntnisse aus dem Projekt PePP: Partnerschaft für innovative E-Prüfungen},
+  title     = {Kompetenzorientiertes Prüfen in der Hochschullehre im Fachgebiet der grafischen Modellierung},
+  year      = {2023},
+  address   = {Verbund der ba-wü. Univ.: Freiburg i. Br., Heidelberg, Hohenheim, Karlsruhe, Konstanz, Mannheim, Stuttgart, Tübingen, Ulm.},
+  editor    = {Karin Kleinn and Sven Slotosch and Matthias Bandtel and Elisa Bumann},
+  pages     = {31-34},
+}
+
+
+
+@Article{DBLP:journals/insk/AccorsiUA12,
+  author    = {Rafael Accorsi and Meike Ullrich and Wil M. P. van der Aalst},
+  journal   = {Informatik Spektrum},
+  title     = {Process Mining},
+  year      = {2012},
+  number    = {5},
+  pages     = {354--359},
+  volume    = {35},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/insk/AccorsiUA12.bib},
+  doi       = {10.1007/S00287-012-0641-4},
+  timestamp = {Mon, 26 Jun 2023 20:57:39 +0200},
+}
+
+@InProceedings{DBLP:conf/wecwis/CaporaleCLSU13,
+  author    = {Timm Caporale and Murat {\c{C}}itak and Jonas Lehner and Andreas Schoknecht and Meike Ullrich},
+  booktitle = {Proc. 15th Conf. on Business Informatics (CBI), Wien, Österreich},
+  title     = {Social {BPM} Lab - Characterization of a Collaborative Approach for Business Process Management Education},
+  year      = {2013},
+  pages     = {367--373},
+  publisher = {IEEE},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/wecwis/CaporaleCLSU13.bib},
+  doi       = {10.1109/CBI.2013.60},
+  timestamp = {Mon, 26 Jun 2023 20:45:35 +0200},
+}
+
+@InProceedings{DBLP:conf/otm/KoschmiderKU13,
+  author    = {Agnes Koschmider and Simone Kriglstein and Meike Ullrich},
+  booktitle = {Proc. On the Move to Meaningful Internet Systems {OTM}, Graz, Österreich},
+  title     = {Investigations on User Preferences of the Alignment of Process Activities, Objects and Roles},
+  year      = {2013},
+  editor    = {Robert Meersman and Herv{\'{e}} Panetto and Tharam S. Dillon and Johann Eder and Zohra Bellahsene and Norbert Ritter and Pieter De Leenheer and Dejing Dou},
+  pages     = {57--74},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {8185},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/otm/KoschmiderKU13.bib},
+  doi       = {10.1007/978-3-642-41030-7\_5},
+  timestamp = {Mon, 26 Jun 2023 20:45:26 +0200},
+}
+
+@InProceedings{DBLP:conf/ecis/CaporaleCLOSU13,
+  author    = {Timm Caporale and Murat {\c{C}}itak and Jonas Lehner and Andreas Oberweis and Andreas Schoknecht and Meike Ullrich},
+  booktitle = {Proc. 21st European Conf. on Information Systems (ECIS), Utrecht, Niederlande},
+  title     = {Motivating Course Concept: Using Active Labs For {BPM} Education},
+  year      = {2013},
+  publisher = {AIS eLibrary},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/ecis/CaporaleCLOSU13.bib},
+  timestamp = {Mon, 05 Dec 2016 15:14:00 +0100},
+}
+
+@Article{DBLP:journals/emisa/KoschmiderKU13,
+  author    = {Agnes Koschmider and Simone Kriglstein and Meike Ullrich},
+  journal   = {Enterprise Modelling and Information Systems Architecture (EMISA) Forum},
+  title     = {Investigations on User Preferences of the Alignment of Process Activities, Objects, and Roles (Extended Abstract)},
+  year      = {2013},
+  number    = {2},
+  pages     = {34},
+  volume    = {33},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/emisa/KoschmiderKU13.bib},
+  doi       = {10.1007/BF03345901},
+  timestamp = {Sat, 14 Jan 2023 22:47:00 +0100},
+}
+
+@InProceedings{DBLP:conf/caise/KoschmiderUHO15,
+  author    = {Agnes Koschmider and Meike Ullrich and Antje Heine and Andreas Oberweis},
+  booktitle = {Proc. 27th Int. Conf on Advanced Information Systems Engineering (CAiSE), Stockholm, Schweden},
+  title     = {Revising the Vocabulary of Business Process Element Labels},
+  year      = {2015},
+  editor    = {Jelena Zdravkovic and Marite Kirikova and Paul Johannesson},
+  pages     = {69--83},
+  publisher = {Springer},
+  series    = {LNCS},
+  volume    = {9097},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/caise/KoschmiderUHO15.bib},
+  doi       = {10.1007/978-3-319-19069-3\_5},
+  timestamp = {Mon, 26 Jun 2023 20:44:32 +0200},
+}
+
+@InProceedings{DBLP:conf/modellierung/AugensteinCUV16,
+  author    = {Dominik Augenstein and Murat {\c{C}}itak and Meike Ullrich and Arthur Vetter},
+  booktitle = {Proc. Modellierung 2016 - Workshopband, 1. Workshop zur Modellierung in der Hochschullehre (MoHoL), Karlsruhe Deutschland},
+  title     = {Experience Report: Social {BPM} Lab enhanced with participation of professionals},
+  year      = {2016},
+  editor    = {Stefanie Betz and Ulrich Reimer},
+  pages     = {71--78},
+  publisher = {{Gesellschaft für Informatik e.V.}},
+  series    = {{LNI}},
+  volume    = {{P-255}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/modellierung/AugensteinCUV16.bib},
+  timestamp = {Tue, 04 Jul 2023 17:44:32 +0200},
+}
+
+@Proceedings{DBLP:conf/modellierung/2020c,
+  title     = {Proc. Modellierung 2020 Short, Workshop and Tools {\&} Demo Papers co-located with Modellierung 2020, Wien, Österreich},
+  year      = {2020},
+  editor    = {Judith Michael and Dominik Bork and Hans{-}Georg Fill and Peter Fettke and Dimitris Karagiannis and Julius K{\"{o}}pke and Agnes Koschmider and Heinrich C. Mayr and Jana{-}Rebecca Rehse and Ulrich Reimer and Michael Striewe and Marina Tropmann{-}Frick and Meike Ullrich},
+  publisher = {CEUR-WS},
+  volume    = {2542},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/modellierung/2020c.bib},
+  timestamp = {Fri, 10 Mar 2023 16:23:18 +0100},
+  urn       = {urn:nbn:de:0074-2542-0},
+}
+
+@InProceedings{CaporaleCitakLehner2013_1000040694,
+  author    = {Caporale, Timm and Citak, Murat and Lehner, Jonas and Oberweis, Andreas and Schoknecht, Andreas and Ullrich, Meike},
+  booktitle = {Proc. 19th European University Information System Congress (EUNIS), ICT Role for Next Generation Universities},
+  title     = {Repository Platform for Motivating Education},
+  year      = {2013},
+  publisher = {{European Universities Information Systems}},
+  doi       = {10.7250/eunis.2013.034},
+  language  = {english},
+}
+
+
